# precise-native

./: .gitignore  AudioManager.cpp  AudioManager.hpp  BUILD  CMakeLists.txt  FftCalc.cc  FftCalc.hh  ModelRunner.cc  ModelRunner.hpp  README.md  RealtimeProcessor.cpp  RealtimeProcessor.hpp  fake_tensorflow.h  local_tensorflow.h  precise.cc
mfcc/: LICENSE  Mfcc.cpp  Mfcc.h  README.md
